# Oryxly

./: .env.example  .gitignore  claude.md  docker-compose.yml  readme.md
backend/: .dockerignore  .env.example  .env.production.example  Dockerfile  Dockerfile.prod  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 092133ef008c_add_lite_plan_and_monthly_email_limit.py  28ca1c8e506b_create_users_table.py  302509c99220_create_templates_table.py  37c43efe009a_create_contacts_tables.py  6cae9dd0cdaf_create_attachments_tables.py  82529195332d_add_is_locked_is_admin_invitations.py  906fca4f7033_create_audit_logs_table.py  a1b2c3d4e5f6_add_smtp_account_limit_to_users.py  bf6f691d350d_create_smtp_accounts_table.py  dca7936c2077_create_campaigns_campaign_recipients_.py  f3c8a2e1b7d9_add_inline_campaign_content.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: config.py  crypto.py  plans.py  rate_limits.py  ratelimit.py  redis_client.py  security.py
backend/app/database/: session.py
backend/app/models/: __init__.py  attachment.py  audit_log.py  campaign.py  contact.py  invitation.py  smtp_account.py  template.py  user.py
backend/app/repositories/: attachments.py  campaigns.py  contacts.py  invitations.py  logs.py  smtp_accounts.py  templates.py  usage.py  users.py
backend/app/schemas/: admin.py  attachments.py  auth.py  campaigns.py  contacts.py  (+4 more)
backend/tests/: conftest.py  test_auth.py  test_campaigns.py  test_config.py  test_contacts.py  test_rate_limits.py  test_smtp.py  test_templates.py  test_workers.py
(+123 files in other folders)
