[project]
name = "mailflow-backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "bcrypt>=5.0.0",
    "celery>=5.6.3",
    "cryptography>=48.0.0",
    "email-validator>=2.3.0",
    "fastapi>=0.136.3",
    "openpyxl>=3.1.5",
    "passlib[bcrypt]>=1.7.4",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2",
    "pydantic-settings>=2.14.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.30",
    "redis>=8.0.0",
    "sqlalchemy>=2",
    "uvicorn[standard]>=0.48.0",
    "xlrd>=2.0.2",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]
